--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -523,4 +523,7 @@
 
     <!-- Device supports Sustained Performance Mode-->
     <bool name="config_sustainedPerformanceModeSupported">true</bool>
+
+    <!-- ManualSubProvisioning -->
+    <bool name="config_enableManualSubProvisioning">true</bool>
 </resources>
