--- a/overlay/packages/apps/Bluetooth/res/values/config.xml
+++ b/overlay/packages/apps/Bluetooth/res/values/config.xml
@@ -27,5 +27,6 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
 <resources>
+    <bool name="profile_supported_hfpclient">true</bool>
     <bool name="profile_supported_sap">true</bool>
 </resources>
