--- a/overlay/lineage-sdk/lineage/res/res/values/config.xml
+++ b/overlay/lineage-sdk/lineage/res/res/values/config.xml
@@ -21,9 +21,10 @@
          app, they can be remapped here. The format is
          "oldname:newname", one per entry. -->
     <string-array name="config_displayModeMappings" translatable="false">
-        <item>Default:standard</item>
-        <item>Warm1:reading</item>
-        <item>Cold1:dynamic</item>
+        <item>00default:standard</item>
+        <item>01warm:reading</item>
+        <item>02cool:dynamic</item>
+        <item>37sRGB-native:srgb</item>
     </string-array>
 
     <!-- Default value for proximity check on screen wake
